# -

./: README.md
HarmonyOS-Linglong-Kernel/T-MAC-main/deveco_project/: README.md  build-profile.json5  build.json  module.json  oh-package.json5  project.config.json  project.json
HarmonyOS-Linglong-Kernel/T-MAC-main/tools/: convert_to_hiai.py  run_pipeline.py
HarmonyOS-Linglong-Kernel/mllm-main/: INSTALL_SCRIPT_README.md  install_mllm_quick.sh  install_mllm_ubuntu.sh
HarmonyOS-Linglong-Kernel/mllm-main/docs/: README.md
HarmonyOS-Linglong-Kernel/mllm-main/examples/mindspore_lite_demo/: CMakeLists.txt  README.md  mindspore_lite_demo.cpp
HarmonyOS-Linglong-Kernel/mllm-main/scripts/: install_pymllm.sh
HarmonyOS-intelligent-operation/: .py  README.md
HarmonyOS-intelligent-operation/background/: ErrorLogger.py  GetRequest.py  GetStatus.py  NFTMarket.py  ReportGenerator.py  ReturnData.py  monitor.db  ops_manager.py  train_rnn_tcn.py
HarmonyOS-intelligent-operation/background/NAYDN/: NAYDN.py
HarmonyOS-intelligent-operation/background/reports/: HYDON-20251107224149_20251107_224149.json  HYDON-20251107224149_20251107_224149.txt  HYDON-20251107224215_20251107_224215.json  HYDON-20251107224215_20251107_224215.txt  HYDON-20251107224248_20251107_224248.json  (+135 more)
HarmonyOS-intelligent-operation/tCup/: README.md  index.html  package-lock.json  package.json
Harmonyos-Application/: build-profile.json5
Harmonyos-Application/entry/: build-profile.json5
Harmonyos-Application/frontend/: README.md  package-lock.json  package.json  server.js
(+102 files in other folders)
